--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@vercel/analytics": "^1.6.1",
     "@vercel/postgres": "^0.10.0",
     "@vercel/speed-insights": "^1.3.1",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -58,6 +59,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
