--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,45 @@
-.env
-.next/
-.firebase/
-node_modules
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# Dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# Testing
+/coverage
+
+# Next.js build output
+/.next/
+/out/
+
+# Production build files
+/build
+
+# dotenv environment variables file
+.env*.local
+
+# Debug log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# IDE files
+.idx
+
+# Firebase
+.firebase
+firebase.json
+database.rules.json
+.firebaserc
+
+# Other
+*.pem
